@@ -7,6 +7,7 @@ Date: ????
     - Make the upcycle payout configurable
     - Emulate products finished
     - Spill contained items upon upcycler removal
+    - Emulate the progressbar if a connected player is staring at it
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.4
 Date: 2024. 10. 22
